# nta

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  app.json  babel.config.js  fly.toml  framework7.json  index.html  jsconfig.json  package-lock.json  package.json  postcss.config.js  spec.yaml  svelte.config.mjs  sync-server.ts  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  wrangler.jsonc
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
.old/: package.json
android/: settings.gradle
android/app/: build.gradle
client/: .gitignore  index.html  index.js  main.js  package-lock.json  package.hist.json  package.json  tsconfig.json  vite.config.ts
client/pages/: _ui.json  page1.json  page2.json
client/src/: App.tsx  deps.js  local-sync.ts  (+7 more)
components/: list-pages.html
data/: index.css  index.html
files/: test.hist.json  test.json  test2.hist.json  test2.json
ios/: Podfile
nta-server/: index.ts
old/: package-lock.json  vite.config.ts
pages/: _app.tsx  index.tsx  main.html  main.md  page-1.html  page1.json  page1.meta.json  page2.json
public/: login.html  manifest.json  site.webmanifest
scripts/: anytype-md-import.ts  generate-jwt.mjs  main.js
server/: Cargo.toml  README.md  index.ts  main.rs  package-lock.json  package.json
src/: api.rs  app.css  app.html  app.module.ts  collab.rs  command-palette.ts  document-sync.ts  index.html  index.ts  main.rs  main.ts  manifest.json  schema.gql  sidebar.ts  style.css  types.ts
tests/: app.test.tsx
vps-server/: README.md  index.js  package-lock.json  package.json
(+180 files in other folders)
